# ComputerGraphics-Project

./: CMakeLists.txt  README.md  cg1.h.in
cg1/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  main.cpp
cg1/core/: Application.cpp  Application.h  Arcball.cpp  Arcball.h  Camera.cpp  Camera.h  FlashLight.cpp  FlashLight.h  FreeCamera.cpp  FreeCamera.h  SceneObject.cpp  SceneObject.h
cg1/gfx/: GPUProgram.cpp  GPUProgram.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
cg1/resources/Blender_Files/: Stonehengebed.blend1  scene.blend  scene.blend.orig  scene.blend1
cg1/resources/meshes/: README.txt  Stonehengebed.mtl  bridge.mtl  example.mtl  terrainSurface.mtl  terrainSurface.mtl.orig  terrainSurface.obj.orig  torch.mtl  waterSurface.mtl  waterSurface.mtl.orig  waterSurface.obj.orig
cg1/resources/textures/: example_h.tga  terrain-texture.tga  water-texture.tga
cg1/resources/torch/: torch.mtl
cg1/scenes/: Scene.cpp  Scene.h
cg1/shaders/: example.frag  example.vert  sceneShader.frag  sceneShader.vert
